--- a/locale/ko/LC_MESSAGES/django.po
+++ b/locale/ko/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-31 22:56+0900\n"
+"POT-Creation-Date: 2023-08-31 23:40+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,6 +18,10 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
+#: .\cart\forms.py:11
+msgid "Quantity"
+msgstr "수량"
+
 #: .\config\settings.py:179
 msgid "English"
 msgstr "영어"
@@ -25,6 +29,66 @@ msgstr "영어"
 #: .\config\settings.py:180
 msgid "Korean"
 msgstr "한국어"
+
+#: .\coupons\forms.py:6
+msgid "Coupon"
+msgstr "쿠폰"
+
+#: .\templates\orders\create.html:5 .\templates\orders\create.html:9
+msgid "Checkout"
+msgstr "체크아웃"
+
+#: .\templates\orders\create.html:11
+msgid "Your order"
+msgstr "주문 정보"
+
+#: .\templates\orders\create.html:21
+#, python-format
+msgid ""
+"\n"
+"                        \"%(code)s\" (%(discount)s%% off)\n"
+"                    "
+msgstr ""
+
+#: .\templates\orders\create.html:28
+msgid "Total"
+msgstr "총"
+
+#: .\templates\orders\create.html:32
+msgid "Place order"
+msgstr "주문하기"
+
+#: .\templates\shop\base.html:19
+msgid "My shop"
+msgstr "내 상점"
+
+#: .\templates\shop\base.html:25
+msgid "Your cart:"
+msgstr "장바구니:"
+
+#: .\templates\shop\base.html:27
+#, python-format
+msgid ""
+"\n"
+"                        %(items)s item, $%(total)s\n"
+"                    "
+msgid_plural ""
+"\n"
+"                        %(items)s items, $%(total)s\n"
+"                    "
+msgstr[0] ""
+
+#: .\templates\shop\base.html:34
+msgid "Your cart is empty"
+msgstr "장바구니가 비었습니다."
+
+#: .\templates\shop\product\detail.html:22
+msgid "Add to cart"
+msgstr "장바구니 담기"
+
+#: .\templates\shop\product\detail.html:27
+msgid "People who bought this also bought"
+msgstr "이 제품을 구매한 사람들은 다음 제품도 구매했습니다."
 
 #: .\venv\Lib\site-packages\click\_termui_impl.py:518
 #, python-brace-format
