--- a/orders/locale/ko/LC_MESSAGES/django.po
+++ b/orders/locale/ko/LC_MESSAGES/django.po
@@ -2,13 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-31 23:07+0900\n"
+"POT-Creation-Date: 2023-09-01 00:11+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+
 #: .\orders\models.py:12
 msgid "first name"
 msgstr "이름"
@@ -40,3 +41,7 @@ msgstr "우편 번호"
 #: .\orders\models.py:17
 msgid "city"
 msgstr "도시"
+
+#: .\orders\urls.py:9
+msgid "create/"
+msgstr "생성/"
